# paper-pdf-translator

./: .gitignore  README.md  pyproject.toml
paper_pdf_translator/: __main__.py  cli.py  translator.py
